--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer id="footer" class="flex-shrink-0 py-3 bg-dark text-white">
+<footer id="footer" class="flex-shrink-0 py-3 footer-text">
     <div class="container text-center">
-      <small>Copyright &copy; <%= link_to "Andrii Kuluiev", "https://www.linkedin.com/in/andrey-kuluev-0353aa150/", class: "text-white" %> </small>
+      <small>Copyright &copy; <%= link_to "Andrii Kuluiev", "https://www.linkedin.com/in/andrey-kuluev-0353aa150/", class: "footer-text" %> </small>
     </div>
 </footer>
