--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -3,5 +3,9 @@
   bottom: 0;
   width: 100%;
   height: 60px; /* Height of the footer */
-  background: #6cf;
+  background: #efefef;
+}
+
+.footer-text {
+  color: #000000;
 }
