--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -1,24 +1,11 @@
-.navbar {
-  background-color: black !important;
-}
-
-.nav-link {
-  color: white !important;
-}
-
 .navbar-brand {
-  margin-left: 10%;
-}
-
-.navbar-end {
-  margin-right: 10%;
-}
-
-#logo {
-  float: left;
-  font-size: 1.7em;
-  color: #fff;
+  margin-left: 12.5%;
   text-transform: uppercase;
   letter-spacing: -1px;
   font-weight: bold;
+}
+
+.navbar-end {
+  margin-left: auto;
+  margin-right: 12.5%;
 }
