--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "settings";
 @import "bootstrap";
 @import "font-awesome";
 
@@ -5,3 +6,4 @@
 @import "navigation";
 @import "body";
 @import "table";
+@import "subscription_card";
