--- a/app/concepts/subscription/component/card_modal.slim
+++ b/app/concepts/subscription/component/card_modal.slim
@@ -1,9 +1,12 @@
-.btn.btn-outline-success data-bs-toggle="modal" data-bs-target="#create_modal"
-  .fa-solid.fa-plus
-  = ' '
-  = 'Add new'
+button [
+  type="button"
+  class="btn btn-lg btn-block btn-outline-primary"
+  data-bs-toggle="modal"
+  data-bs-target="##{modal_id}"
+  ]
+  = I18n.t('subscribe.button_label')
 
-#create_modal.modal
+.modal[id="#{modal_id}"]
   .modal-dialog
     .modal-content
       == simple_form_for Link.new, url: link_path, method: :post do |f|
