--- a/app/views/layouts/_navigation.slim
+++ b/app/views/layouts/_navigation.slim
@@ -20,5 +20,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
       }
         = current_user.email
       ul.dropdown-menu.dropdown-menu-end aria-labelledby='navbarDropdown'
-        li.dropdown-item = link_to 'Subscriptions', root_path, class: 'nav-link'
+        li.dropdown-item = link_to 'Subscriptions', subscriptions_path, class: 'nav-link'
         li.dropdown-item = link_to 'Log out', destroy_user_session_path, class: 'nav-link', method: :delete
