--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,12 @@
     <%= render 'layouts/navigation' %>
       <center>
         <div id="page-content">
+          <% flash.each do |type, msg| %>
+            <div class="alert alert-success" role="alert">
+              <%= msg %>
+            </div>
+          <% end %>
+
           <%= yield %>
         </div>
       </center>
